--- a/style.css
+++ b/style.css
@@ -5766,7 +5766,7 @@ header .ttr_title_style a:hover {
 }
 
 .ttr_footer_googleplus {
-  background: url(images/footergoogleplus.png);
+  background: url(images/pngaaa.com-1155943.png);
   background-repeat: no-repeat;
   top: 30px;
   left: 52.77%;
